; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_syscalls.c_sys_readlinkat.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_syscalls.c_sys_readlinkat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.readlinkat_args = type { i32, i32, i32, i32 }

@UIO_USERSPACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_readlinkat(%struct.thread* %0, %struct.readlinkat_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.readlinkat_args*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.readlinkat_args* %1, %struct.readlinkat_args** %4, align 8
  %5 = load %struct.thread*, %struct.thread** %3, align 8
  %6 = load %struct.readlinkat_args*, %struct.readlinkat_args** %4, align 8
  %7 = getelementptr inbounds %struct.readlinkat_args, %struct.readlinkat_args* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.readlinkat_args*, %struct.readlinkat_args** %4, align 8
  %10 = getelementptr inbounds %struct.readlinkat_args, %struct.readlinkat_args* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @UIO_USERSPACE, align 4
  %13 = load %struct.readlinkat_args*, %struct.readlinkat_args** %4, align 8
  %14 = getelementptr inbounds %struct.readlinkat_args, %struct.readlinkat_args* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @UIO_USERSPACE, align 4
  %17 = load %struct.readlinkat_args*, %struct.readlinkat_args** %4, align 8
  %18 = getelementptr inbounds %struct.readlinkat_args, %struct.readlinkat_args* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @kern_readlinkat(%struct.thread* %5, i32 %8, i32 %11, i32 %12, i32 %15, i32 %16, i32 %19)
  ret i32 %20
}

declare dso_local i32 @kern_readlinkat(%struct.thread*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
